# data_analytics

./: .gitignore  README.md  pyproject.toml
1_simple_first_case/: first_case.ipynb
2_portfolio_risk_and_performance_analysis/: analysis.ipynb
2_portfolio_risk_and_performance_analysis/data/: get_data_set.py
2_portfolio_risk_and_performance_analysis/prompt/: prompt.md
3_ESG_vs_nonESG/: EDA.ipynb  prompt.md
4_efficient_frontier/: modeling.ipynb
5_dividend_vs_non_dividend_stocks/: analysis.py
finance/1_simple_first_case/: first_case.ipynb  sample_stock_data.csv
finance/2_portfolio_risk_and_performance_analysis/: analysis.ipynb
finance/3_ESG_vs_nonESG/: EDA.ipynb
finance/bank_customer_churn/: README.md  analysis.ipynb  logistic_regression.ipynb  tree_model.ipynb
finance/efficient_frontier/: README.md  modeling.ipynb
finance/portfolio_modeling/: model.ipynb
finance/trading_strategy/: moving_average_crossover_strategy.py
general/heart_attack_rate/: analysis.ipynb  download_data.py
general/sentiment_analysis/BERT/: analyse.py
general/sentiment_analysis/LSTM/: model.py
notes/: datestrings.ipynb
portfolio_risk_and_performance_analysis/data/: stock_data.csv
portfolio_risk_and_performance_analysis/prompt/: answer.md
simple_first_case/: first_case.ipynb  main.py
src/Computer_vision/first_tries/: main.py
src/EDA/MA_stocks/: README.md
src/EDA/portfolio_modeling/: README.md  portfolio_math.ipynb  portfolio_optimization.py
src/ML_models/LSTM_trading/: main.py
trading/LSTM_trading/: README.md
trading/MA_stocks/: MA_strategy.py
(+19 files in other folders)
