[project]
name = "data-analytics-learning-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.2.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]

[tool.mypy]

# Change "src/your_package" to the appropriate path for your project
files = "src/ML_models/real_estate_market/src"

ignore_missing_imports = true
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true

